# common-ansible

./: .cspell.json  .eslintrc.cjs  .gitlab-ci.yml  .prettierignore  .start.sh  .yamllint  LICENSE  README.md  Taskfile-shared.yml  Taskfile.yml  Taskfile.yml.liquid  common.playbook.json  common.role.json  lib.sh  log  package-lock.json  package.json  package.json.liquid  package.playbook.json  package.playbook.json.handlebars  package.playbook.json.hbs  package.role.json  package.role.json.handlebars  package.role.json.hbs  pnpm-lock.yaml  pyproject.toml  pyproject.toml.liquid  requirements.playbook.txt  requirements.role.txt  requirements.txt  start.sh  update.sh  variables.json  variables.playbook.json  variables.role.json
.common/: Taskfile.yml.handlebars  package.hbs.json
.common-playbook/: .gitlab-ci.yml  package.hbs.json
.common-role/: .gitlab-ci.yml  package.hbs.json
.config/: Brewfile  eslintcache  package-lock.json  start.sh  yamllint.yml
.devcontainer/: devcontainer.json
docs/: .gitlab-ci.yml  README.md  blueprint-readme-role.md  common.json  variables.json
files/: .flake8  .gitignore  .gitlab-ci.yml  .lintstagedrc  .prettierignore  .travis.yml  Taskfile.yml  package.json
files-playbook/: .eslintrc.cjs  .flake8  .gitignore  .gitlab-ci.yml  .start.sh  Taskfile.yml  common.json  package.json  package.json.handlebars  requirements.txt
files-role/: .eslintrc.cjs  .travis.yml  Taskfile.yml  common.json  package.json  package.json.handlebars  requirements.txt
helpers/: index.js
local/: package-lock.json
playbook-files/: .gitlab-ci.yml  (+1 more)
(+1343 files in other folders)
